--- a/app/src/main/res/layout/activity_on_click.xml
+++ b/app/src/main/res/layout/activity_on_click.xml
@@ -12,7 +12,7 @@
             android:layout_height="match_parent" >
 
             <TextView
-                android:id="@+id/name"
+                android:id="@+id/nameMovie"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="TextView"
@@ -29,7 +29,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:numStars="10"
-                android:stepSize="0.5" />
+                android:stepSize="1" />
 
         </TableRow>
 
@@ -49,13 +49,13 @@
             android:layout_height="match_parent" >
 
             <TextView
-                android:id="@+id/genre"
+                android:id="@+id/genreMovie"
                 android:layout_width="149dp"
                 android:layout_height="match_parent"
                 android:text="TextView" />
 
             <TextView
-                android:id="@+id/regiesseur"
+                android:id="@+id/regiesseurMovie"
                 android:layout_width="163dp"
                 android:layout_height="wrap_content"
                 android:text="TextView" />
