--- a/app/src/main/res/layout/activity_on_click.xml
+++ b/app/src/main/res/layout/activity_on_click.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <TableLayout
@@ -54,12 +56,6 @@
                 android:layout_height="match_parent"
                 android:text="TextView" />
 
-            <TextView
-                android:id="@+id/regiesseurMovie"
-                android:layout_width="163dp"
-                android:layout_height="wrap_content"
-                android:text="TextView" />
-
         </TableRow>
 
         <TableRow
@@ -72,10 +68,28 @@
                 android:layout_height="wrap_content"
                 android:text="TextView" />
 
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
+
             <TextView
-                android:id="@+id/actor"
+                android:id="@+id/Regie"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:text="TextView" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/Actor"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="TextView" />
         </TableRow>
 
     </TableLayout>
