--- a/app/src/main/res/layout/activity_on_click.xml
+++ b/app/src/main/res/layout/activity_on_click.xml
@@ -92,6 +92,17 @@
                 android:text="TextView" />
         </TableRow>
 
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
+
+            <Button
+                android:id="@+id/share"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Share" />
+        </TableRow>
+
     </TableLayout>
 
 </android.support.constraint.ConstraintLayout>
