--- a/app/src/main/res/layout/activity_share_with_friends.xml
+++ b/app/src/main/res/layout/activity_share_with_friends.xml
@@ -15,7 +15,8 @@
             android:id="@+id/listViewFriends"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="0.5" />
+            android:layout_weight="0.5"
+            android:footerDividersEnabled="true" />
 
         <ListView
             android:id="@+id/selectedFriends"
